force-app/main/default/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/HealthCloudGA__DispenseMedicationCode__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__DispenseMedicationCode__c</fullName>
    <description>Code that identify this medication</description>
    <inlineHelpText>Code that identify this medication</inlineHelpText>
    <label>Dispense Medication Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>