force-app/main/default/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/HealthCloudGA__DispenseMedicationCodeSystem__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__DispenseMedicationCodeSystem__c</fullName>
    <description>System for Code that identifies this medication</description>
    <inlineHelpText>System for Code that identifies this medication</inlineHelpText>
    <label>Dispense Medication Code System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>