force-app/main/default/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/HealthCloudGA__DispenseMedicationIsBrand__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__DispenseMedicationIsBrand__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if a brand</description>
    <inlineHelpText>True if a brand</inlineHelpText>
    <label>Dispense Medication Is Brand</label>
    <type>Checkbox</type>
</CustomField>