force-app/main/default/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/HealthCloudGA__DispenseMedicationLotNumber__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__DispenseMedicationLotNumber__c</fullName>
    <description>Lot number for medication batch</description>
    <inlineHelpText>Lot number for medication batch</inlineHelpText>
    <label>Dispense Medication Lot Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>