force-app/main/default/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/HealthCloudGA__DispenseMedicationName__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__DispenseMedicationName__c</fullName>
    <description>Common / Commercial name</description>
    <inlineHelpText>Common / Commercial name</inlineHelpText>
    <label>Dispense Medication Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>