force-app/main/default/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/HealthCloudGA__DispenseMedicationProductFormCode__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__DispenseMedicationProductFormCode__c</fullName>
    <description>powder | tablets | carton + code</description>
    <inlineHelpText>powder | tablets | carton + code</inlineHelpText>
    <label>Dispense Medication Product Form Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>