force-app/main/default/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/HealthCloudGA__DispenseValidityPeriodEnd__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__DispenseValidityPeriodEnd__c</fullName>
    <label>Dispense Validity Period End</label>
    <type>DateTime</type>
</CustomField>