force-app/main/default/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/HealthCloudGA__DispenseValidityPeriodStart__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__DispenseValidityPeriodStart__c</fullName>
    <label>Dispense Validity Period Start</label>
    <type>DateTime</type>
</CustomField>