force-app/main/default/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/HealthCloudGA__PrescriberName__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__PrescriberName__c</fullName>
    <label>Prescriber Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>