force-app/main/default/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/HealthCloudGA__ReasonCode__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ReasonCode__c</fullName>
    <description>Reason or indication for writing the prescription</description>
    <inlineHelpText>Reason or indication for writing the prescription</inlineHelpText>
    <label>Reason Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>