force-app/main/default/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/HealthCloudGA__ReasonLabel__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ReasonLabel__c</fullName>
    <description>Friendly name for Reason code or indication for writing the prescription</description>
    <inlineHelpText>Friendly name for Reason code or indication for writing the prescription</inlineHelpText>
    <label>Reason Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>