force-app/main/default/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/HealthCloudGA__StatusSystem__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__StatusSystem__c</fullName>
    <description>System for Status Code</description>
    <inlineHelpText>System for Status Code</inlineHelpText>
    <label>Status System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>