force-app/main/default/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/HealthCloudGA__SubstituteRestrictReasonCode__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__SubstituteRestrictReasonCode__c</fullName>
    <description>Any restrictions on medication substitution?</description>
    <label>Substitute Restrict Reason Code</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>