force-app/main/default/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/HealthCloudGA__SubstituteRestrictReasonLabel__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__SubstituteRestrictReasonLabel__c</fullName>
    <description>Any restrictions on medication substitution, generic / formulary + friendly name</description>
    <inlineHelpText>Any restrictions on medication substitution, generic / formulary + friendly name</inlineHelpText>
    <label>Substitute Restrict Reason Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>