force-app/main/default/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/HealthCloudGA__SubstituteRestrictReasonSystem__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__SubstituteRestrictReasonSystem__c</fullName>
    <description>Any restrictions on medication substitution? coding system</description>
    <inlineHelpText>Any restrictions on medication substitution? coding system</inlineHelpText>
    <label>Substitute Restrict Reason System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>