force-app/main/default/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/HealthCloudGA__SubstituteRestrictTypeCode__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__SubstituteRestrictTypeCode__c</fullName>
    <description>generic | formulary + code</description>
    <inlineHelpText>generic | formulary + code</inlineHelpText>
    <label>Substitute Restrict Type Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>