force-app/main/default/objects/HealthCloudGA__EhrMedicationPrescription__c/fields/HealthCloudGA__SubstituteRestrictTypeLabel__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__SubstituteRestrictTypeLabel__c</fullName>
    <description>generic | formulary + code friendly name</description>
    <inlineHelpText>generic | formulary + code friendly name</inlineHelpText>
    <label>Substitute Restrict Type Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>